crates/reze_compiler/tests/snapshots/snapshots__server__props_rejected.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "function A({ [key]: a }) { return <p>{a}</p>; }\nfunction B({ a = f() }) { return <p>{a}</p>; }\nfunction C({ a: { b } = {} }) { return <p>{b}</p>; }\nfunction D({ a: { ...b } }) { return <p>{b}</p>; }\nfunction E({ a }) { a = 1; return <p>{a}</p>; }\nfunction F({ a }) { return <p>{arguments.length}{a}</p>; }\nfunction* G({ a }) { yield <p>{a}</p>; }\nconst H = function ({ a }, ref) { return <p ref={ref}>{a}</p>; };\nconst I = ({ a: [b] }) => <p>{b}</p>;"
---
import { ssr as _$ssr, ssrHydrationKey as _$ssrHydrationKey, ssrChild as _$ssrChild } from "reze-js";
const _tmpl$ = ["<p", ">", "</p>"],
  _tmpl$2 = ["<p", "><!--[-->", "<!--]--><!--[-->", "<!--]--></p>"];
function A({ [key]: a }) { return _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrChild(a)); }
function B({ a = f() }) { return _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrChild(a)); }
function C({ a: { b } = {} }) { return _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrChild(b)); }
function D({ a: { ...b } }) { return _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrChild(b)); }
function E({ a }) { a = 1; return _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrChild(a)); }
function F({ a }) { return _$ssr(_tmpl$2, _$ssrHydrationKey(), _$ssrChild(arguments.length), _$ssrChild(a)); }
function* G({ a }) { yield _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrChild(a)); }
const H = function ({ a }, ref) { return _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrChild(a)); };
const I = ({ a: [b] }) => _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrChild(b));
// warn
[PROPS_DESTRUCTURED] `A` destructures its props with a computed key, which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <A>
  at case.tsx:1:12
> 1 | function A({ [key]: a }) { return <p>{a}</p>; }
    |            ^^^^^^^^^^^^
  2 | function B({ a = f() }) { return <p>{a}</p>; }
// warn
[PROPS_DESTRUCTURED] `B` destructures its props with a default that cannot run once at the component's start (a call, `new`, a tagged template, or a name declared later or in the body), which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <B>
  at case.tsx:2:12
  1 | function A({ [key]: a }) { return <p>{a}</p>; }
> 2 | function B({ a = f() }) { return <p>{a}</p>; }
    |            ^^^^^^^^^^^
  3 | function C({ a: { b } = {} }) { return <p>{b}</p>; }
// warn
[PROPS_DESTRUCTURED] `C` destructures its props with a default on a nested pattern, which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <C>
  at case.tsx:3:12
  2 | function B({ a = f() }) { return <p>{a}</p>; }
> 3 | function C({ a: { b } = {} }) { return <p>{b}</p>; }
    |            ^^^^^^^^^^^^^^^^^
  4 | function D({ a: { ...b } }) { return <p>{b}</p>; }
// warn
[PROPS_DESTRUCTURED] `D` destructures its props with a rest element in a nested pattern, which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <D>
  at case.tsx:4:12
  3 | function C({ a: { b } = {} }) { return <p>{b}</p>; }
> 4 | function D({ a: { ...b } }) { return <p>{b}</p>; }
    |            ^^^^^^^^^^^^^^^
  5 | function E({ a }) { a = 1; return <p>{a}</p>; }
// warn
[PROPS_DESTRUCTURED] `E` destructures its props with a destructured name that is assigned, which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <E>
  at case.tsx:5:12
  4 | function D({ a: { ...b } }) { return <p>{b}</p>; }
> 5 | function E({ a }) { a = 1; return <p>{a}</p>; }
    |            ^^^^^
  6 | function F({ a }) { return <p>{arguments.length}{a}</p>; }
// warn
[PROPS_DESTRUCTURED] `F` destructures its props with a body that reads `arguments`, which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <F>
  at case.tsx:6:12
  5 | function E({ a }) { a = 1; return <p>{a}</p>; }
> 6 | function F({ a }) { return <p>{arguments.length}{a}</p>; }
    |            ^^^^^
  7 | function* G({ a }) { yield <p>{a}</p>; }
// warn
[PROPS_DESTRUCTURED] `G` destructures its props with a generator function, which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <G>
  at case.tsx:7:13
  6 | function F({ a }) { return <p>{arguments.length}{a}</p>; }
> 7 | function* G({ a }) { yield <p>{a}</p>; }
    |             ^^^^^
  8 | const H = function ({ a }, ref) { return <p ref={ref}>{a}</p>; };
// warn
[PROPS_DESTRUCTURED] `H` destructures its props with more than one parameter, which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <H>
  at case.tsx:8:21
  7 | function* G({ a }) { yield <p>{a}</p>; }
> 8 | const H = function ({ a }, ref) { return <p ref={ref}>{a}</p>; };
    |                     ^^^^^
  9 | const I = ({ a: [b] }) => <p>{b}</p>;
// warn
[PROPS_DESTRUCTURED] `I` destructures its props with an array pattern, which cannot be rewritten: each value is read once when the component runs and never updates. Take `props` and read `props.x` where it is used.
  in <I>
  at case.tsx:9:12
  8 | const H = function ({ a }, ref) { return <p ref={ref}>{a}</p>; };
> 9 | const I = ({ a: [b] }) => <p>{b}</p>;
    |            ^^^^^^^^^^
