crates/reze_compiler/tests/snapshots/snapshots__server__props_rest_block.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "function Link({ href, \"aria-label\": label, ...rest }) {\n  \"use client\";\n  return <a href={href} aria-label={label} {...rest} />;\n}"
---
import { splitProps as _$splitProps, mergeProps as _$mergeProps, ssr as _$ssr, ssrHydrationKey as _$ssrHydrationKey, ssrSpread as _$ssrSpread, ssrChild as _$ssrChild } from "reze-js";
const _tmpl$ = ["<a", "", ">", "</a>"];
function Link(_props$) {
  "use client"; const rest = _$splitProps(_props$, ["href", "aria-label"])[1];
  return (() => {
  var _s$ = _$mergeProps({ get href() { return _props$.href; }, get "aria-label"() { return _props$["aria-label"]; } }, rest);
  return _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrSpread(_s$, false), _$ssrChild(_s$.children));
})();
}
// info
[PROPS_REWRITTEN] `Link` destructures its props: the pattern became one props object and every destructured name a read of it at its use, so each read stays reactive.
  in <Link>
  at case.tsx:1:15
> 1 | function Link({ href, "aria-label": label, ...rest }) {
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  2 |   "use client";
