crates/reze_compiler/tests/snapshots/snapshots__server__props_simple.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "function Greeting({ name, count }) {\n  return <p title={name}>{name}: {count}</p>;\n}"
---
import { ssr as _$ssr, ssrHydrationKey as _$ssrHydrationKey, ssrAttribute as _$ssrAttribute, ssrChild as _$ssrChild } from "reze-js";
const _tmpl$ = ["<p", "", "><!--[-->", "<!--]-->: <!--[-->", "<!--]--></p>"];
function Greeting(_props$) {
  return _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrAttribute("title", _props$.name), _$ssrChild(_props$.name), _$ssrChild(_props$.count));
}
// info
[PROPS_REWRITTEN] `Greeting` destructures its props: the pattern became one props object and every destructured name a read of it at its use, so each read stays reactive.
  in <Greeting>
  at case.tsx:1:19
> 1 | function Greeting({ name, count }) {
    |                   ^^^^^^^^^^^^^^^
  2 |   return <p title={name}>{name}: {count}</p>;
